--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,13 @@
 {
     "manifest_version": 3,
     "name": "Web3Switcher",
-    "version": "1.1",
+    "version": "1.2",
     "description": "Easily switch between different Hive frontends to enhance your browsing experience.",
     "permissions": [
       "tabs"
     ],
-    "icons": {
-      "128": "images/Web3Switcher.png"
-    },
     "action": {
-      "default_icon": {
-        "128": "Web3Switcher.png"
-    },
+      "default_icon": "icons/Web3Switcher.png",
       "default_popup": "popup.html"
     },
     "host_permissions": [
